--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hook-form": "^7.68.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-toast": "link:@/hooks/use-toast",
     "ws": "^8.18.3",
     "zod": "^4.2.0"
   },
