--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postinstall": "prisma generate",
     "start": "next start",
     "lint": "next lint",
+    "prisma:generate": "prisma generate",
     "test": "vitest",
     "test:node": "vitest --project=node",
     "test:client": "vitest --project=client",
