--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@vitejs/plugin-react": "^5.1.2",
     "@vitest/ui": "^4.0.15",
     "autoprefixer": "^10.4.23",
+    "baseline-browser-mapping": "^2.9.19",
     "dotenv": "^17.2.3",
     "dotenv-cli": "^11.0.0",
     "eslint": "^9.39.2",
@@ -71,17 +72,3 @@
     "seed": "node prisma/seed.js"
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
